ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.practice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-backend-svc
                port:
                  number: 80
    - host: web.practice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-backend-svc
                port:
                  number: 80
  tls:
    - hosts:
        - api.practice.local
        - web.practice.local
      secretName: practice-tls
